fixed alignment issue with nav

--- a/css/index.css
+++ b/css/index.css
@@ -168,23 +168,21 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-.nav-container {
+.main-navigation {
+  width: 100%;
+  height: 90px;
+  background: #FFFFFF;
+  border-bottom: 2px dashed #C0C0C0;
+  position: fixed;
+}
+.main-navigation .nav-container {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 2px silver dashed;
+  align-items: center;
+  height: 100%;
 }
-.nav-container nav {
+.main-navigation .nav-container a {
   font-size: 1.5rem;
-  margin: 20px 2.27%;
-}
-.nav-container nav a {
-  margin: 20px;
-}
-.nav-container .header-text {
-  padding-top: 20px;
 }
 .footer {
   width: 100%;
