--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,27 +1,22 @@
 
-.nav-container {
-
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 2px silver dashed;
+.main-navigation {
+    width: 100%;
+    height: 90px;
+    background: @main-bg;
+    border-bottom: 2px dashed @navigation-border;
+    position: fixed;
     
-
-
-    nav {
-        font-size: 1.5rem;
-        margin: 20px 2.27%;
+    .nav-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+        
 
         a {
-            margin: 20px;
+            font-size: 1.5rem; 
         }
     }
 
-    .header-text {
-        padding-top: 20px;
-    }
 } // main-navigation
-
 
